--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 				<title>demo | boosted share library</title>
 				<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 				<link rel="stylesheet" href="cdn/default.css">
+      <meta name="viewport" content="initial-scale=1.0">
 				<script src="cdn/share.js">
 								
 				</script>
