--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 <div class="form-floating mb-3">
 			
-  <input class="form-control" placeholder="url" id="url" value="https://gboard.app.goo.gl?utm_campaign=user_referral&amv=26830000&apn=com.google.android.inputmethod.latin&ibi=com.google.keyboard&isi=1091700242&link=https%3A%2F%2Fdeeplink.com.google.android.inputmethod.latin%2F%3FdeeplinkInfo%3DH4sIAAAAAAAAAJM41dQjAQDDpanpBQAAAA%253D%253D&utm_medium=deeplink&utm_source=access_point&ofl=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.google.android.inputmethod.latin/">
+  <input class="form-control" placeholder="url" id="url" value="https://cutt.ly/tbWmOoi">
   <label for="url">url to be shared</label>
 </div>
 <div class="form-floating">
